--- a/styles2.css
+++ b/styles2.css
@@ -5,12 +5,22 @@ body {
     font-size: 30px;
 }
 
-header {
+#main-header  {
     margin: 0px auto;
     background-color: #784481; 
     color: white;
 }
-nav {
+
+#main-header .nav-link.is-active {
+    border: 2px solid #c990d3;
+    background-color: #210a25;
+    color: white;
+}
+
+.is-active {
+    display: block;
+}
+nav  {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -25,13 +35,25 @@ a {
     text-decoration: none;
 }
 
-.section-imagen {
-    display: flex;
-    flex-direction: row;
+.main-sct {
+    display: none;
+  }
+.is-active {
+    display: block;
+}
+
+#sct-random {
+    box-sizing: border-box;
+    padding: 25px;
     justify-content: center;
-    width: 500px;
-    overflow: hidden;
-    margin: 0px auto;
+}
+#sct-random figure {
+    box-shadow: 0 0 3px #333;
+    padding: 5px;
+    max-width: 80%;
+}
+#sct-random figure img {
+    max-width: 100%;
 }
 
 .buscar {
@@ -46,7 +68,9 @@ a {
     padding: 4px;
     height: 20px;
 }
-
+img {
+    width: 350px;
+}
 #search {
     padding: 4px;
     height: 20px;
@@ -55,22 +79,13 @@ button{
     height: 32px;
     padding: 4px;
 }
-.contenedor {
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.div-gatos {
-    display: flex;
-    flex-direction: column;
-}
+
 table {
     margin-top: 30px;
     border-collapse: collapse;
 }
 th{
-    padding: 0px 60px;
+    padding: 0px 100px;
 }
 td {
     padding: 0px 60px;
@@ -78,6 +93,7 @@ td {
     text-align: center;
     border-top: 2px solid black;
     background-color: #c676d4;
+    cursor: pointer;
 }
 form {
     display: flex;
